tests/error/test06.block
test06 {
   // Declaration error: double declaration of a variable of the same type.
   int i = 1 ;
   int i = 1;
}